hermes_fuzz_executed/fuzz_6_execution
'use strict';


  
import {JSApplicationSerializer} from'react-native'
import {withHermes} from 'ReactNativeVectorIcons';

withHermes(JSApplicationSerializer)

import './main.js'

Execution Output ------------------:
test.js:5:1: error: 'import' statement requires module mode
import {JSApplicationSerializer} from'react-native'
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.js:6:1: error: 'import' statement requires module mode
import {withHermes} from 'ReactNativeVectorIcons';
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.js:10:1: error: 'import' statement requires module mode
import './main.js'
^~~~~~~~~~~~~~~~~~
